<resources>
    <string name="app_name">Learn Python</string>
    <string name="button1">  Basic Python</string>
    <string name="main">Course Outline:</string>
    <string name="b1Basic">1.Introduction To Python</string>
    <string name="b2Basic">2.First Program in Python</string>
    <string name="b3Basic">3.Variables</string>
    <string name="b4Basic">4.User input In Python</string>
    <string name="b5Basic">5.Keyword</string>
    <string name="b6">6.Operators in Python</string>
    <string name="b7">7.Data Type</string>
    <string name="b8Basic">8.Comments</string>
    <string name="b9Basic">9.If</string>
    <string name="b10Basic">10.If Else</string>
    <string name="b11Basic">11.If Else Ladder</string>
    <string name="b12Basic">12.Nested If</string>
    <string name="b131Basic">13.range() function</string>
    <string name="b13Basic">14.For Loop</string>
    <string name="b14Basic">15.While Loop</string>
    <string name="b15Basic">16.Jump Statement</string>
    <string name="b16Basic">17.Lists</string>
    <string name="b17Basic">18.List Functions</string>
    <string name="b18Basic">19.List Method</string>
    <string name="b19set">20.sets</string>
    <string name="b20tuples">21.Tuples</string>
    <string name="b21">22.Tuple Function</string>
    <string name="b22">23.Dictionaries</string>
    <string name="b23">24.String</string>
    <string name="b24">25.String Method</string>
    <string name="b25">26.Function</string>
    <string name="b26">27.Math Function</string>
    <string name="b27">28.Date and Time</string>
    <string name="b1mainscreen">1.Basic Python</string>
    <string name="b2mainscreen">2.OOP in Python</string>
    <string name="b3maincsreen">3.Python Programs</string>
    <string name="b4maincsreen">4.Quiz in Python</string>
    <string name="title_activity_encapsulation">encapsulation</string>
    <string name="intoall"> Here is an introduction to Python:</string>
    <string name="introi">Introduction</string>
    <string name="intro"> 1. What is Python?:</string>
    <string name="intro1"> • Python is a high-level, interpreted, and general-purpose programming language. </string>
    <string name="intro2"> • It was created by Guido van Rossum and first released in 1991.</string>
    <string name="intro3"> • Python\'s design philosophy emphasizes code readability, simplicity, and a focus on clear syntax, making it easy to learn and use.</string>
    <string name="intro4"> 2. Interpreted Language:</string>
    <string name="intro5"> • Python is an interpreted language, meaning it does not need to be compiled before running.</string>
    <string name="intro6"> • The Python interpreter reads the code line by line and executes it directly.</string>
    <string name="intro7"> 3. High-level Language:</string>
    <string name="intro8"> • Python provides a high-level abstraction, allowing developers to focus on solving problems without worrying about low-level details like memory management.</string>
    <string name="intro9"> 4. General-purpose Language:</string>
    <string name="intro10"> • Python can be used for a wide range of applications, such as web development, data analysis, artificial intelligence, scientific computing, automation, and more.</string>
    <string name="intro11"> 5. Python Features:</string>
    <string name="intro12"> • Dynamic typing: Variables can change data types during execution.</string>
    <string name="intro13"> • Object-oriented: Supports object-oriented programming (OOP) concepts.</string>
    <string name="intro14"> • Strongly-typed: Data type errors are checked during runtime.</string>
    <string name="intro15"> • Indentation-based syntax: Uses indentation to define code blocks (no curly braces).</string>
    <string name="intro16"> 6. Python Libraries and Frameworks:</string>
    <string name="intro17"> • Python has a rich ecosystem of libraries and frameworks, such as:</string>
    <string name="intro18"> • NumPy and Pandas for data manipulation and analysis.</string>
    <string name="intro19"> • Django and Flask for web development.</string>
    <string name="intro20"> • TensorFlow and PyTorch for machine learning and artificial intelligence.</string>
    <string name="intro21"> • Matplotlib and Seaborn for data visualization.</string>
    <string name="intro22"> Applications of Python:</string>
    <string name="intro23"> 1. Web Development:</string>
    <string name="intro24"> • Python\'s web frameworks like Django and Flask are popular choices for building web applications.</string>
    <string name="intro25"> • They provide robust features, easy database integration, and rapid development capabilities.</string>
    <string name="intro26"> 2. Data Analysis and Visualization:</string>
    <string name="intro27"> • Python, along with libraries like NumPy and Pandas, is widely used for data manipulation, cleaning, and analysis.</string>
    <string name="intro28"> • Visualization libraries like Matplotlib and Seaborn help create interactive and informative data visualizations.</string>
    <string name="intro29"> 3. Machine Learning and Artificial Intelligence:</string>
    <string name="intro30"> • Python has become a dominant language in the machine learning and AI domains. </string>
    <string name="intro31"> • Libraries like TensorFlow, PyTorch, and Scikit-learn make it easy to implement complex machine learning models and perform deep learning tasks.</string>
    <string name="intro32"> 4. Scripting and Automation:</string>
    <string name="intro33"> • Python is often used for writing scripts and automating repetitive tasks. </string>
    <string name="intro34"> • Its simplicity and cross-platform compatibility make it an excellent choice for automation in various systems.</string>
    <string name="intro35"> 5. Scientific Computing:</string>
    <string name="intro36"> • Python is popular in scientific research and engineering fields.</string>
    <string name="intro37"> • Libraries like SciPy and NumPy provide tools for scientific computing, numerical methods, and advanced mathematical functions.</string>
    <string name="intro38"> 6. Game Development:</string>
    <string name="intro39"> • Python has game development frameworks like Pygame that are used to create simple 2D games and prototypes.</string>
    <string name="intro40"> 7. Natural Language Processing (NLP):</string>
    <string name="intro41"> • Python is used in NLP applications, such as language translation, sentiment analysis, and chatbots, thanks to libraries like NLTK (Natural Language Toolkit) and spaCy.</string>
    <string name="intro42"> 8. Data Science:</string>
    <string name="intro43"> • Python\'s data manipulation and visualization capabilities, along with its integration with other data science libraries, make it a popular choice for data science projects.</string>
    <string name="intro44"> •</string>
    <string name="intro45"> •</string>
    <string name="intro46"> •</string>
    <string name="intro47"> •</string>
    <string name="intro48"> •</string>
    <string name="intro49"> •</string>
    <string name="intro50"> •</string>
    <string name="intro51"> •</string>
    <string name="intro52"> •</string>
    <string name="intro53"> •</string>
    <string name="intro54"> •</string>
    <string name="intro55"> •</string>
    <string name="intro56"> •</string>
    <string name="intro57"> •</string>
    <string name="intro58"> •</string>
    <string name="variables">Variables and Types</string>
    <string name="variablesdef">In Python,a variable is a named storage location used to store data.Unlike some other programming languages,you don not need to declare the type of a variable explicitly in Python.The data type of the variable is determined automatically based on the value assigned to it.</string>
    <string name="naming">Variables Naming Rule in Python</string>
    <string name="naming1">1.Variable names can contain letters (both uppercase and lowercase),digits, and underscores(_).</string>
    <string name="naming2">2.
     The first character of the variable
     name cannot be a digit.</string>
    <string name="naming3">3.Variable names are case-sensitive, so "myVar" and "myvar" are considered different variables.</string>
    <string name="naming4">4.Python reserved keywords (e.g., if, else, while, for, etc.) cannot be used as variable names.</string>
    <string name="Assigning">Assigning Values to Variables</string>
    <string name="Assignning1">In Python, you assign a value to a variable using the assignment operator (=). The value on the right side of the equal sign is assigned to the variable on the left side.</string>
    <string name="examplecode">Example Code</string>
    <string name="examplecode1">Here are some examples to demonstrate how to create variables and assign values to them:</string>
    <string name="output1">Output: Current temperature is: 25.5</string>
    <string name="output2">Output: Am I a student? True</string>
    <string name="datatypes">Data Types</string>
    <string name="keywords">Keywords</string>
    <string name="lets">Let\'s explain some of the essential keywords with code examples:</string>
    <string name="operators">Here are some of the common operators in Python along with explanations and example code snippets showing their usage and output</string>
    <string name="operators1">Operators in Python</string>
    <string name="decision">Decision Control</string>
    <string name="decision1">
  . In Python,decision control is
    implemented using conditional
    statements.
  . These statements allow you to
    control the flow of your program
    based on certain conditions.
  . The three primary decision
    control structures in Python are:</string>
    <string name="d2">1.\'if\'statement: The if statement allows you to execute a block of code only if a certain condition is true. If the condition is false, the block of code will be skipped.</string>
    <string name="d3">2.\'if-else\' statement: The if-else statement enables you to execute one block of code if a condition is true and another block of code if the condition is false.</string>
    <string name="d4">3.\'if-elif-else\' statement: The \'if-elif-else\' statement allows you to chain multiple conditions together and execute different blocks of code based on the first condition that evaluates to true.</string>
    <string name="d5">Now let\'s go through each of these decision control structures with code explanations:</string>
    <string name="d6">1 .\'if\' statement</string>
    <string name="d7">
Explanation:
 . In this example the \'if\' statement
   checks if the value of x is greater than
   5.
 . Since the condition x > 5 is true
  (x is 10),the indented block of
  code underneath the if statement
   is executed,
  resulting in the output "x is
  greater than 5."</string>
    <string name="d8">2. if-else statement:</string>
    <string name="d9">
 Explanation:
  -> In this example,the \'if\' statement
    checks if the value of x is greater
    than 5.
  -> Since x is 3, the condition is false,
    and the code block under the else
    statement
    is executed, resulting in the output
    x is not greater than 5."</string>
    <string name="d10">3. \'if-elif-else\' statement:</string>
    <string name="course">Course Title: Object-Oriented Programming in Python</string>
    <string name="oop"> OOP in Python</string>
    <string name="button"> 1.Class</string>
    <string name="button11"> 2.Object</string>
    <string name="button2"> 4.Encapsulation</string>
    <string name="button3"> 5.Inheritance</string>
    <string name="button4"> 6.Polymorphism</string>
    <string name="button5"> 7.Data Abstraction</string>
    <string name="button6"> 3.Constructor</string>
    <string name="banner_ad_unit">ca-app-pub-1186461984348395/5605468633</string>
</resources>