<?xml version="1.0" encoding="utf-8"?>
<!-- b1b means button 1 for basic python

b2b means button 2 for basic python

this layout file for basic python topic -->



<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2EB7C6"
    tools:context=".recyclerBasicActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00ACC1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/button1"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#677B7D"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b1Basic"
                android:id="@+id/b1b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b2Basic"
                android:id="@+id/b2b"
                android:onClick="button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b3Basic"
                android:id="@+id/b3b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b4Basic"
                android:id="@+id/b4b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b5Basic"
                android:id="@+id/b5b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b6"
                android:id="@+id/b6b"
                android:onClick="button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b7"
                android:id="@+id/b7b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b8Basic"
                android:id="@+id/b8b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b9Basic"
                android:id="@+id/b9b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b10Basic"
                android:id="@+id/b10b"
                android:onClick="button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b11Basic"
                android:id="@+id/b11b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b12Basic"
                android:id="@+id/b12b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b131Basic"
                android:id="@+id/b131b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b13Basic"
                android:id="@+id/b13b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b14Basic"
                android:id="@+id/b14b"
                android:onClick="button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b15Basic"
                android:id="@+id/b15b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b16Basic"
                android:id="@+id/b16b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b17Basic"
                android:id="@+id/b17b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b18Basic"
                android:id="@+id/b18b"
                android:onClick="button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b19set"
                android:id="@+id/b19b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b20tuples"
                android:id="@+id/b20b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b21"
                android:id="@+id/b21b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b22"
                android:id="@+id/b22b"
                android:onClick="button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b23"
                android:id="@+id/b23b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b24"
                android:id="@+id/b24b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b25"
                android:id="@+id/b25b"
                android:onClick="button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#43A047"
                android:textAlignment="textStart"
                android:textSize="23sp"
                android:text="@string/b26"
                android:id="@+id/b26b"
                android:onClick="button"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>