<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#059E9E"
    tools:context=".MainActivity"
    android:layout_height="match_parent">
    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit"
        android:id="@+id/adView1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/main"
        android:textAlignment="textStart"
        android:background="#21E8E8"
        android:textSize="30sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:layout_marginStart="20sp"
            android:columnCount="2">
            <Button
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:textAlignment="center"
                android:textSize="23sp"
                android:text="@string/b1mainscreen"
                android:id="@+id/btn1m"
                android:onClick="click"/>
            <Button
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:textAlignment="center"
                android:textSize="23sp"
                android:text="@string/b2mainscreen"
                android:id="@+id/btn2m"
                android:layout_marginStart="10sp"
                android:onClick="click"/>
            <Button
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:textAlignment="center"
                android:textSize="23sp"
                android:text="@string/b3maincsreen"
                android:id="@+id/btn3m"
                android:onClick="click"/>
            <Button
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                android:textSize="23sp"
                android:text="@string/b4maincsreen"
                android:id="@+id/btn4m"
                android:onClick="click"/>
        </GridLayout>
    </ScrollView>
</LinearLayout>