<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OOPinPython"
    android:background="#299CAE"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/oop"
       android:padding="10sp"
        android:background="#04B8D3"
        android:textSize="30sp"
        android:textColor="@color/black" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:splitMotionEvents="true"
            android:layout_marginTop="10sp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0D4D57"
                    android:textSize="23sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/course"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13sp"
            android:orientation="vertical">
            <Button
                android:id="@+id/ClassAdvanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BFA5"
                android:text="@string/button"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:onClick="oopClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/button11"
                android:textSize="23sp"
                android:textAlignment="textStart"
                android:layout_marginTop="5sp"
                android:id="@+id/objectAdvance"
                android:onClick="oopClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/button6"
                android:textSize="23sp"
                android:textAlignment="textStart"
                android:layout_marginTop="5sp"
                android:id="@+id/constructor"
                android:onClick="oopClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/button2"
                android:textSize="23sp"
                android:layout_marginTop="5sp"
                android:textAlignment="textStart"
                android:id="@+id/encapsulationAdvance"
                android:onClick="oopClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/button3"
                android:textSize="23sp"
                android:layout_marginTop="5sp"
                android:textAlignment="textStart"
                android:id="@+id/InheritanceAdvance"
                android:onClick="oopClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/button4"
                android:textSize="23sp"
                android:layout_marginTop="5sp"
                android:textAlignment="textStart"
                android:id="@+id/polymorphismAdvance"
                android:onClick="oopClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/button5"
                android:textSize="23sp"
                android:layout_marginTop="5sp"
                android:textAlignment="textStart"
                android:id="@+id/DataAbtractionAdvance"
                android:onClick="oopClick"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>